@@ -7,5 +7,5 @@ targets:
   - name: pypi
   - name: github
 requireNames:
-  - /^responses-.+-py2.py3-none-any.whl$/
+  - /^responses-.+-py3-none-any.whl$/
   - /^responses-.+.tar.gz$/
