@@ -14,7 +14,7 @@ A utility library for mocking out the ``requests`` Python library.
 
 ..  note::
 
-    Responses requires Python 2.7 or newer, and requests >= 2.0
+    Responses requires Python 3.7 or newer, and requests >= 2.0
 
 
 Table of Contents
